feat: add media sharing and voice messages
Media BLoC:
- MediaBloc for handling file uploads
- Events: ImagePick, FilePick, ImageUpload, FileUpload, VoiceUpload
- States: Initial, Picking, Uploading (with progress), UploadSuccess, Error
- Progress tracking for all uploads

Media Widgets:
- ImagePickerBottomSheet: Camera/Gallery selection
- VoiceRecorderWidget: Record voice messages with timer and waveform
- FilePreview: Display file information with icon and size

Updated Chat Input:
- Added attachment menu (Image, File)
- Voice recording integration
- Callback handlers for all media types
- Visual feedback during recording

Updated Message Bubble:
- Support for image messages with network loading
- File message display with icon and size
- Voice message with play button and waveform
- Proper styling for all media types

Chat Room Integration:
- MediaBloc provider and listener
- Upload media before sending message
- Convert uploaded media to MessageEntity
- Error handling for upload failures

Permissions:
- Android: Camera, Storage, Microphone
- iOS: Camera, Photo Library, Microphone

Features:
- Image upload from camera or gallery
- File attachment (any type)
- Voice message recording with duration
- Upload progress indicators
- Media preview in chat
- File size formatting
- Proper error handling

All media widgets include:
- Permission handling
- Loading states
- Error recovery
- Responsive design
- Material 3 styling

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,17 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <!-- Camera -->
+    <key>NSCameraUsageDescription</key>
+    <string>We need camera access to take photos</string>
+
+    <!-- Photo Library -->
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>We need photo library access to select images</string>
+
+    <!-- Microphone -->
+    <key>NSMicrophoneUsageDescription</key>
+    <string>We need microphone access to record voice messages</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
