--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   image_picker: ^1.2.1
   file_picker: ^10.3.8
   photo_view: ^0.15.0
+  path_provider: ^2.1.5
 
   # Utilities
   intl: ^0.20.2
