feat: add push notifications with FCM
Notification Service:
- Created NotificationService with FCM integration
- Request and handle notification permissions
- Foreground message handling with local notifications
- Background message handler
- Message tap handling and navigation
- FCM token management and refresh

User Model Updates:
- Added fcmToken field to UserModel and UserEntity
- Store FCM token on sign in/up
- Update token on refresh

Auth DataSource Updates:
- Save FCM token to Firestore on authentication
- Update token when user signs in
- Inject FirebaseMessaging dependency

Main App Integration:
- Initialize NotificationService on app start
- Set background message handler
- Proper Firebase initialization order

Firebase Cloud Function:
- sendMessageNotification function
- Triggers on new message creation
- Sends notification to recipient
- Handles different message types (text, image, file, voice)
- Passes chat data for navigation

Platform Configuration:
- Android: Notification permissions and channels
- iOS: Background modes and permissions
- Deep linking for notification taps

Features:
- Real-time push notifications for new messages
- Background and foreground handling
- Message type indicators (text, image, file, voice)
- Auto-navigate to chat on notification tap
- Token refresh handling
- Notification channels for Android

All notifications include:
- Sender name as title
- Message preview or type indicator
- Chat navigation data
- Sound and vibration
- Badge updates

--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,36 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"chat-app-32d89","appId":"1:1012246054356:android:514a8c3760d604166c4241","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"chat-app-32d89","configurations":{"android":"1:1012246054356:android:514a8c3760d604166c4241","ios":"1:1012246054356:ios:b990ed080e5f75e16c4241"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "chat-app-32d89",
+          "appId": "1:1012246054356:android:514a8c3760d604166c4241",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "chat-app-32d89",
+          "configurations": {
+            "android": "1:1012246054356:android:514a8c3760d604166c4241",
+            "ios": "1:1012246054356:ios:b990ed080e5f75e16c4241"
+          }
+        }
+      }
+    }
+  },
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "disallowLegacyRuntimeConfig": true,
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ]
+    }
+  ]
+}
